--- a/index.html
+++ b/index.html
@@ -145,210 +145,9 @@
           </div>
           <div class="tabelaArtilhariaAmarelos">
             <!-- Tabela Artilharia -->
-            <div class="tabelaArtilharia">
-              <h2><strong>Artilharia</strong></h2>
-              <table>
-                <tr>
-                  <td>#</td>
-                  <td></td>
-                  <td></td>
-                  <td><img src="assets/icons/bola-icon.svg"></td>
-                </tr>
-                <tr>
-                  <td>1</td>
-                  <td><img src="assets/images/Bandeira Croácia.png"></td>
-                  <td>Nero</td>
-                  <td>6</td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td><img src="assets/images/Bandeira Holanda.png"></td>
-                  <td>Thiago</td>
-                  <td>4</td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
-                  <td>João Marcos</td>
-                  <td>4</td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Ewerton</td>
-                  <td>3</td>
-                </tr>
-                <tr>
-                  <td>5</td>
-                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                  <td>Guilherme</td>
-                  <td>3</td>
-                </tr>
-                <tr>
-                  <td>6</td>
-                  <td><img src="assets/images/Bandeira Croácia.png"></td>
-                  <td>Helton</td>
-                  <td>3</td>
-                </tr>
-                <tr>
-                  <td>7</td>
-                  <td><img src="assets/images/Bandeira Croácia.png"></td>
-                  <td>Caio</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>8</td>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Burguês</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>9</td>
-                  <td><img src="assets/images/Bandeira Holanda.png"></td>
-                  <td>Gustavo</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>10</td>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Victor Hugo</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>11</td>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Matheus</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>12</td>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Rafael</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>13</td>
-                  <td><img src="assets/images/Bandeira Turquia.png"></td>
-                  <td>Ceara</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td>14</td>
-                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                  <td>Clarito</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>15</td>
-                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
-                  <td>Marcos</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>16</td>
-                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
-                  <td>Helbert</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>17</td>
-                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
-                  <td>Ayrton</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>18</td>
-                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                  <td>Rafael</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>19</td>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Hamilton</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>20</td>
-                  <td><img src="assets/images/Bandeira Holanda.png"></td>
-                  <td>Pedro</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>21</td>
-                  <td><img src="assets/images/Bandeira Turquia.png"></td>
-                  <td>Artur Gabriel</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td>22</td>
-                  <td><img src="assets/images/Bandeira Croácia.png"></td>
-                  <td>Orivaldo</td>
-                  <td>1</td>
-                </tr>
-              </table>
-            </div>
+            <div id="tabArtilharia" class="tabelaArtilharia"></div>
             <!-- Cartões Amarelos -->
-            <div class="cartoesAmarelos">
-              <h2><strong>Cartões Amarelos</strong></h2>
-              <table>
-                <tr>
-                  <td><img src="assets/images/Bandeira Croácia.png"></td>
-                  <td>Nero</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Holanda.png"></td>
-                  <td>Thiago</td>
-                  <td>2</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                  <td>Clarito</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                  <td>Luiz Eduardo</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Croácia.png"></td>
-                  <td>Marquinhos</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Bélgica.png"></td>
-                  <td>David</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Turquia.png"></td>
-                  <td>João Carlos</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Turquia.png"></td>
-                  <td>Ceara</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Turquia.png"></td>
-                  <td>Juliano</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Inglaterra.png"></td>
-                  <td>Hamilton</td>
-                  <td>1</td>
-                </tr>
-                <tr>
-                  <td><img src="assets/images/Bandeira Dinamarca.png"></td>
-                  <td>Helbert</td>
-                  <td>1</td>
-                </tr>
-              </table>
-            </div>
+            <div id="tabCartaoAmarelo" class="cartoesAmarelos"></div>
           </div>
         </div>
         <!-- Galeria -->
