--- a/index.html
+++ b/index.html
@@ -110,38 +110,15 @@
           </div>
         </div>
         <!-- Tabela de Jogos -->
-        <div class="tabelaJogos">
-          <!-- Rodada 1 -->
-          <div id="jornada1" class="tabelaX corTabela1"></div>
-          <!-- Rodada 2 -->
-          <div id="jornada2" class="tabelaX corTabela2"></div>
-          <!-- Rodada 3 -->
-          <div id="jornada3" class="tabelaX corTabela3"></div>
-          <!-- Rodada 4 -->
-          <div id="jornada4" class="tabelaX corTabela4"></div>
-          <!-- Rodada 5 -->
-          <div id="jornada5" class="tabelaX corTabela5"></div>
-          <!-- Rodada 6 -->
-          <div id="jornada6" class="tabelaX corTabela6"></div>
-          <!-- Rodada 7 -->
-          <div id="jornada7" class="tabelaX corTabela7"></div>
-        </div>
+        <div id="resultados" class="tabelaJogos"></div>
         <!-- Tabela de Pontos, Artilharia e Amarelos -->
         <div class="tabelaPAA">
           <!-- Tabela de Pontos -->
           <div class="tabelaPontos">
             <!-- Grupo A -->
-            <div class="tabelaPontosX">
-              <h2><strong>Grupo A</strong></h2>
-              <table id="classificacao1">
-              </table>
-            </div>
+            <div id="GrupoA" class="tabelaPontosX"></div>
             <!-- Grupo B -->
-            <div class="tabelaPontosX">
-              <h2><strong>Grupo B</strong></h2>
-              <table id="classificacao2">
-              </table>
-            </div>
+            <div id="GrupoB" class="tabelaPontosX"></div>
           </div>
           <div class="tabelaArtilhariaAmarelos">
             <!-- Tabela Artilharia -->
@@ -168,6 +145,9 @@
     <!-- Rodapé -->
     <footer>
       <div class="footer">
+        <a href="assets/REGULAMENTO IV TORNEIO PRIMOR.pdf" download class="btnDownload">
+          Ver Regulamento
+        </a>
       </div>
     </footer>
 
