--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <button style="display: none;" id="buttonEliminatorias">Jogos Eliminatórias</button>
       <button id="buttonTabela">Classificação</button>
       <button id="buttonGaleria">Galeria</button>
+      <button id="buttonRegulamento">Regulamento</button>
     </div>
 
     <!-- Conteúdo principal -->
@@ -146,7 +147,7 @@
     <footer>
       <div class="footer">
         <a href="assets/REGULAMENTO IV TORNEIO PRIMOR.pdf" download class="btnDownload">
-          Ver Regulamento
+          <p>Ver Regulamento</p> <img src="assets/icons/download-solid.svg" alt="download">
         </a>
       </div>
     </footer>
