Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <tr>
                 <td>17:00</td>
                 <td><img src="assets/icons/trophy-solid.svg"></td>
-                <td>A definir...</td>
+                <td>Holanda</td>
                 <td></td>
                 <td>x</td>
                 <td></td>
@@ -100,7 +100,7 @@
               <tr>
                 <td>17:50</td>
                 <td><img src="assets/icons/trophy-solid.svg"></td>
-                <td>A definir...</td>
+                <td>Dinamarca</td>
                 <td></td>
                 <td>x</td>
                 <td></td>
