Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Tabs -->
     <div class="tabs">
       <button id="buttonPartidas">Jogos 1º Fase</button>
-      <button style="display: none;" id="buttonEliminatorias">Jogos Eliminatórias</button>
+      <button id="buttonEliminatorias">Jogos Eliminatórias</button>
       <button id="buttonTabela">Classificação</button>
       <button id="buttonGaleria">Galeria</button>
       <button id="buttonRegulamento">Regulamento</button>
@@ -37,7 +37,7 @@
     <main>
       <div class="main">
         <!-- Mata Mata -->
-        <div style="display: none;" class="tabelaMataMata">
+        <div class="tabelaMataMata">
           <div class="cardFinal">
             <div class="tacaFinal">
               <img src="assets/images/Taça Euro2024.png" alt="">
