Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <td></td>
                 <td>x</td>
                 <td></td>
-                <td>A definir...</td>
+                <td>Turquia</td>
                 <td><img src="assets/icons/trophy-solid.svg"></td>
               </tr>
             </table>
