Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -87,25 +87,25 @@
             <table>
               <tr>
                 <td>17:00</td>
-                <td><img src="assets/icons/trophy-solid.svg"></td>
+                <td><img src="assets/images/Holanda.png"></td>
                 <td>Holanda</td>
                 <td></td>
                 <td>x</td>
                 <td></td>
                 <td>Croácia</td>
-                <td><img src="assets/icons/trophy-solid.svg"></td>
+                <td><img src="assets/images/Croácia.png"></td>
               </tr>
             </table>
             <table>
               <tr>
                 <td>17:50</td>
-                <td><img src="assets/icons/trophy-solid.svg"></td>
+                <td><img src="assets/images/Dinamarca.png"></td>
                 <td>Dinamarca</td>
                 <td></td>
                 <td>x</td>
                 <td></td>
                 <td>Turquia</td>
-                <td><img src="assets/icons/trophy-solid.svg"></td>
+                <td><img src="assets/images/Turquia.png"></td>
               </tr>
             </table>
           </div>
