--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
             </div>
             <table>
               <tr>
-                <td>17:00</td>
-                <td><img src="assets/icons/trophy-solid.svg"></td>
+                <td>17:00</td> <!-- RETIRAR FILTRO DE OPACIDADE!!! -->
+                <td><img style="filter: opacity(.25);" src="assets/icons/trophy-solid.svg"></td>
                 <td>A definir...</td>
                 <td></td>
                 <td>x</td>
                 <td></td>
                 <td>A definir...</td>
-                <td><img src="assets/icons/trophy-solid.svg"></td>
+                <td><img style="filter: opacity(.25);" src="assets/icons/trophy-solid.svg"></td>
               </tr>
             </table>
           </div>
@@ -95,8 +95,6 @@
                 <td>Croácia</td>
                 <td><img src="assets/images/Bandeira Croácia.png"></td>
               </tr>
-            </table>
-            <table>
               <tr>
                 <td>17:50</td>
                 <td><img src="assets/images/Bandeira Dinamarca.png"></td>
