Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <img src="assets/images/Taça Euro2024.png" alt="">
             </div>
             <div class="timesTitle">
-              <img src="assets/icons/trophy-solid.svg">
+              <img src="assets/icons/Bandeira Croácia.png">
               <div class="titleCardFinal">
                 <h1><strong>Final</strong></h1>
                 <i>28 de SETEMBRO 2024</i>
@@ -52,7 +52,7 @@
               <img src="assets/icons/trophy-solid.svg">
             </div>
             <div class="resultadoFinal">
-              <h2><strong></strong></h2>
+              <h2><strong>Croácia</strong></h2>
               <h2><strong></strong></h2>
               <h2><strong>x</strong></h2>
               <h2><strong></strong></h2>
@@ -68,8 +68,8 @@
             <table>
               <tr>
                 <td>17:00</td> <!-- RETIRAR FILTRO DE OPACIDADE!!! -->
-                <td><img style="filter: opacity(.25);" src="assets/icons/trophy-solid.svg"></td>
-                <td>A definir...</td>
+                <td><img src="assets/icons/Bandeira Holanda.png"></td>
+                <td>Holanda</td>
                 <td></td>
                 <td>x</td>
                 <td></td>
@@ -89,9 +89,9 @@
                 <td>17:00</td>
                 <td><img src="assets/images/Bandeira Holanda.png"></td>
                 <td>Holanda</td>
-                <td></td>
+                <td>2</td>
                 <td>x</td>
-                <td></td>
+                <td>3</td>
                 <td>Croácia</td>
                 <td><img src="assets/images/Bandeira Croácia.png"></td>
               </tr>
