Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
               <img src="assets/images/Taça Euro2024.png" alt="">
             </div>
             <div class="timesTitle">
-              <img src="assets/icons/Bandeira Croácia.png">
+              <img src="assets/images/Bandeira Croácia.png">
               <div class="titleCardFinal">
                 <h1><strong>Final</strong></h1>
                 <i>28 de SETEMBRO 2024</i>
                 <i>17:50</i>
               </div>
-              <img src="assets/icons/trophy-solid.svg">
+              <img src="assets/images/Bandeira Dinamarca.png">
             </div>
             <div class="resultadoFinal">
               <h2><strong>Croácia</strong></h2>
               <h2><strong></strong></h2>
               <h2><strong>x</strong></h2>
               <h2><strong></strong></h2>
-              <h2><strong></strong></h2>
+              <h2><strong>Dinamarca</strong></h2>
             </div>
           </div>
           <!-- Disputa 3º Lugar -->
@@ -68,13 +68,13 @@
             <table>
               <tr>
                 <td>17:00</td> <!-- RETIRAR FILTRO DE OPACIDADE!!! -->
-                <td><img src="assets/icons/Bandeira Holanda.png"></td>
+                <td><img src="assets/images/Bandeira Holanda.png"></td>
                 <td>Holanda</td>
                 <td></td>
                 <td>x</td>
                 <td></td>
-                <td>A definir...</td>
-                <td><img style="filter: opacity(.25);" src="assets/icons/trophy-solid.svg"></td>
+                <td>Turquia</td>
+                <td><img src="assets/images/Bandeira Turquia.png"></td>
               </tr>
             </table>
           </div>
