Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             </div>
             <div class="resultadoFinal">
               <h2><strong>Croácia</strong></h2>
-              <h2><strong></strong></h2>
+              <h2><strong>4</strong></h2>
               <h2><strong>x</strong></h2>
-              <h2><strong></strong></h2>
+              <h2><strong>2</strong></h2>
               <h2><strong>Dinamarca</strong></h2>
             </div>
           </div>
